final/sprint_2/my_app_chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "84.201.129.186"  # Замените на ваш домен или IP-адрес
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-release-my-app-chart
                port:
                  number: 3003
